[package]
name = "maelstorm_distrib_challanges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = { version = "0.1" }
anyhow = { version = "1" }
thiserror = { version = "1" }
serde_with = { version = "3.3" }
uuid = { version = "1.4", features = ["v4", "serde"] }
dashmap = { version = "5.5" }
tokio = { version = "1" , features = ["net", "rt", "io-util", "rt-multi-thread"]}
bincode = { version = "1" }

[features]
default = []
log_to_file = []
